--- a/src/assets/css/main-output.css
+++ b/src/assets/css/main-output.css
@@ -519,35 +519,117 @@ video {
   height: auto;
 }
 
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgba(239, 68, 68, var(--tw-border-opacity));
+html {
+  font-size: 16px;
 }
 
-.border-4 {
-  border-width: 4px;
+h1 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
-.inline-block {
-  display: inline-block;
+@media (min-width: 768px) {
+  h1 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
+
+@media (min-width: 1536px) {
+  h1 {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
+h2 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 768px) {
+  h2 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  h2 {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
+
+h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 1024px) {
+  h3 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  h3 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+h4 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 1536px) {
+  h4 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+h5 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+@media (min-width: 1536px) {
+  h5 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+p, span, a {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .table {
   display: table;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.p-5 {
-  padding: 1.25rem;
+.my-3 {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 * {
@@ -563,9 +645,13 @@ video {
   --tw-ring-shadow: 0 0 #0000;
 }
 
-.text-blue-200 {
+.text-center {
+  text-align: center;
+}
+
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgba(191, 219, 254, var(--tw-text-opacity));
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
 @-webkit-keyframes spin {
@@ -657,3 +743,5 @@ video {
 @media (min-width: 1536px) {
 }
 
+@media (min-width: 992px) {
+}
