--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+    *,
+    *::before,
+    *::after {
+        @apply relative transition-all ease-out duration-300;
+    }
+
     html {
         font-size: 16px;
     }
@@ -12,7 +18,7 @@
     }
 
     h2 {
-         @apply 2xl:text-5xl lg:text-4xl md:text-3xl text-2xl;
+        @apply 2xl:text-5xl lg:text-4xl md:text-3xl text-2xl;
     }
 
     h3 {
